src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_11_errors.snap
---
source: src/parser/test.rs
description: "fn(@, x) { return x; }"
expression: "parser_errors(\"fn(@, x) { return x; }\", errors)"
---
fn(@, x) { return x; }
   ^ SyntaxError: Unexpected '@'.
