src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_2_errors.snap
---
source: src/parser/test.rs
description: "fn(1+1) {}"
expression: "parser_errors(\"fn(1+1) {}\", errors)"
---
fn(1+1) {}
   ^ SyntaxError: Unexpected '<int>'.
